--- a/idex.html
+++ b/idex.html
@@ -8,25 +8,25 @@
 </head>
 <body>
 
-  <h1>🇰🇪 Kenyan Student Interactive Page</h1>
-  <p>Welcome to my assignment demo. Hapo sawa! 😎</p>
+  <h1>Kenyan Student Interactive Page</h1>
+  <p>Welcome to my assignment demo. Karibu!</p>
 
   <!-- Part 1: Event Handling -->
   <section>
-    <h2>🎉 Event Handling</h2>
+    <h2>Event Handling</h2>
     <button id="toggleBtn">Show/Hide Campus Life Tip</button>
     <p id="message" style="display:none;">
-      Always balance classwork and social life. Si unajua? 📚🎶
+      Always balance classwork and social life.
     </p>
   </section>
 
   <!-- Part 2: Interactive Elements -->
   <section>
-    <h2>🎮 Interactive Elements</h2>
+    <h2>Interactive Elements</h2>
     
     <!-- Tea or Coffee Toggle -->
-    <button id="modeToggle">☕ Tea or Coffee?</button>
-    <p id="modeMsg">Currently: Tea ☕</p>
+    <button id="modeToggle">Tea or Coffee?</button>
+    <p id="modeMsg">Currently: Tea</p>
 
     <!-- Class Attendance Counter -->
     <div>
@@ -37,16 +37,16 @@
 
     <!-- FAQ Section -->
     <div class="faq">
-      <h3 class="faq-question">How do I access HELB loan? ⬇️</h3>
+      <h3 class="faq-question">How do I access HELB loan?</h3>
       <p class="faq-answer" style="display:none;">
-        Register on the HELB portal, fill the loan application form, and submit before deadline. Hakuna stress! 💸
+        Register on the HELB portal, fill in the loan application form, and submit before the deadline.
       </p>
     </div>
   </section>
 
   <!-- Part 3: Form Validation -->
   <section>
-    <h2>📋 MMU Club Signup Form</h2>
+    <h2>MMU Club Signup Form</h2>
     <form id="signupForm">
       <label>
         Full Name: <input type="text" id="name">
@@ -71,3 +71,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
