--- a/idex.html
+++ b/idex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kenyan Student Interactive Page</title>
+  <title>alooo</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
   <h1>Kenyan Student Interactive Page</h1>
   <p>Welcome to my assignment demo. Karibu!</p>
 
-  <!-- Part 1: Event Handling -->
+  <!--  Event Handling -->
   <section>
     <h2>Event Handling</h2>
     <button id="toggleBtn">Show/Hide Campus Life Tip</button>
@@ -20,7 +20,7 @@
     </p>
   </section>
 
-  <!-- Part 2: Interactive Elements -->
+  <!-- Interactive Elements -->
   <section>
     <h2>Interactive Elements</h2>
     
@@ -44,7 +44,7 @@
     </div>
   </section>
 
-  <!-- Part 3: Form Validation -->
+  <!-- 3Form Validation -->
   <section>
     <h2>MMU Club Signup Form</h2>
     <form id="signupForm">
